--- a/web-agent/package.json
+++ b/web-agent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-resources",
+  "name": "web-agent",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,6 +24,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
